--- a/assets/scss/menu.scss
+++ b/assets/scss/menu.scss
@@ -138,7 +138,7 @@ main {
                 height: 80px;
                 box-shadow: 0px 3px 8px #e5e5e5;
                 padding-left: 15px;
-                padding-right: 10px;
+                padding-right: 15px;
                 min-width: 0;
 
                 // Left section
@@ -170,7 +170,8 @@ main {
                     transition-duration: 400ms;
                     display: flex;
                     flex: 1 1 10%;
-                    align-items: center;
+                    align-items: flex-end;
+                    margin-bottom: 20px;
                     justify-content: right;
                 }
 
